--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <name>GroupFiles</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="linjinze999@163.com" url="https://www.yourcompany.com">linjinze999</vendor>
+    <vendor email="linjinze999@163.com" url="https://github.com/linjinze999/intellijGroupFiles">linjinze999</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
